<resources>
    <string name="app_name">Flynerd</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string-array name="cities">
        <item>Ålesund</item>
        <item>Alta</item>
        <item>Andøya</item>
        <item>Bardufoss</item>
        <item>Båtsfjord</item>
        <item>Bergen</item>
        <item>Berlevåg</item>
        <item>Bodø</item>
        <item>Brønnøysund</item>
        <item>Engeløy</item>
        <item>Fagernes</item>
        <item>Farsund</item>
        <item>Florø</item>
        <item>Frya</item>
        <item>Geilo</item>
        <item>Hamar</item>
        <item>Hammerfest</item>
        <item>Harstad/Narvik</item>
        <item>Hasvik</item>
        <item>Haugesund</item>
        <item>Honningsvag</item>
        <item>Jan Mayen</item>
        <item>Kautokeino</item>
        <item>Kirkenes</item>
        <item>Kjeller</item>
        <item>Kristiansand</item>
        <item>Kristiansund</item>
        <item>Lakselv</item>
        <item>Leknes</item>
        <item>Mehamn</item>
        <item>Mo i Rana</item>
        <item>Molde</item>
        <item>Mosjøen</item>
        <item>Namsos</item>
        <item>Narvik</item>
        <item>Notodden</item>
        <item>Ørland</item>
        <item>Ørsta-Volda</item>
        <item>Oslo</item>
        <item>Pyramiden</item>
        <item>Rakkestad</item>
        <item>Rorøs</item>
        <item>Rygge</item>
        <item>Rørvik</item>
        <item>Røst</item>
        <item>Sandane</item>
        <item>Sandefjord</item>
        <item>Sandnessjøen</item>
        <item>Skien</item>
        <item>Sogndal</item>
        <item>Sørkjosen</item>
        <item>Stavanger</item>
        <item>Stokmarknes</item>
        <item>Stord</item>
        <item>Svalbard</item>
        <item>Svolvær</item>
        <item>Tromsø</item>
        <item>Trondheim</item>
        <item>Vadsø</item>
        <item>Vardø</item>
        <item>Voss</item>
        <item>Værøy</item>
    </string-array>
    <string name="city_name">City Name</string>
    <string name="Search">Search</string>
    <string name="appDescription">An app that can assist you with your flights 😆 It can give you information about flight status, airport weather and more🔥</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_forecast_titleinfo">Weather forecast info</string>
    <string name="activity_forecast_city_initial">city</string>
    <string name="activity_forecast_airport_initial">Airport</string>
    <string name="activity_forecast_weather_initial">Current Weather</string>
    <string name="activity_forecast_temperature_initial">temperature</string>
    <string name="activity_forecast_precipitation_initial">precipation</string>
    <string name="activity_forecast_wind_initial">Wind</string>
    <string name="activity_splash_screen_title_app">Welcome to Flynerd!</string>
    <string name="flight_display_juncture_scheduled_label">scheduled</string>
    <string name="flight_display_juncture_delay_label">delay</string>
    <string name="flight_status_title">Flight Status</string>
    <string name="flight_status_search_hint">Enter flight number</string>
    <string name="flight_status_search_button">Search</string>
    <string name="flight_header_id_sep">/</string>
    <string name="flight_header_no_flights">no flights found</string>
    <string name="flight_popup_title">Flight Status</string>
    <string name="flight_popup_departure_label">Departure:</string>
    <string name="flight_popup_arrival_label">Arrival:</string>
    <string name="header_welcome">👋 Welcome to Flynerd!</string>
    <string name="main_menu_item_home">✈️ Home</string>
    <string name="main_menu_item_flight_status">🌍 Flight Status</string>
    <string name="main_menu_item_airport_weather">☀️ Airport Weather</string>
    <string name="main_menu_item_settings">🔍 Settings</string>
    <string name="activity_settings_accessibility">Accessibility</string>
    <string name="activity_settings_text_size">🔍 Larger Text</string>
    <string name="activity_settings_text_bold">👓 Bold Text</string>
    <string name="flight_display_airport_place">%1$s, %2$s</string>
    <string name="flight_display_unknown">(unknown)</string>
    <string name="flight_display_juncture_actual">actual</string>
    <string name="flight_display_juncture_estimated">estimated</string>
    <string name="flight_display_juncture_scheduled">scheduled</string>
    <string name="flight_display_time_local">%1$s </string>
    <string name="flight_display_time_utc">(%1$s UTC)</string>
    <string name="flight_display_delay_none">on time</string>
    <string name="flight_display_delay">%1$d min</string>
    <string name="flight_display_remaining_label">%1$s remaining</string>
    <string name="flight_popup_lon_lat">Longitude = %1$f - Latitude = %2$f</string>
    <string name="flight_popup_flight_id_empty">Flight number is empty!</string>
    <string name="flight_popup_flight_id_invalid">Flight number is invalid!</string>
    <string name="flight_popup_flight_id_checking">" Checking %1$s"</string>
    <string name="flight_popup_flight_id_non_commercial">This is a non-commercial aircraft \n Currently We provide flight status information only for commercial flights!</string>
    <string name="flight_popup_flight_id_text">Flight number : %1$s%2$s</string>
    <string name="flight_popup_flight_status_scheduled">Flight scheduled</string>
    <string name="flight_popup_flight_status_in_air">Flight on Air</string>
    <string name="flight_popup_flight_status_landed">Flight landed</string>
    <string name="flight_popup_delay_none">No delay!</string>

    <plurals name="flight_popup_delay">
        <item quantity="one">Delay: %1$d minute</item>
        <item quantity="other">Delay: %1$d minutes</item>
    </plurals>
    <string name="activity_forecast_airport">Airport Name : %1$s</string>
    <string name="activity_forecast_city">Serviced City : %1$s</string>
    <string name="activity_forecast_temperature">Temperature : %1$s</string>
    <string name="activity_forecast_precipitation">Precipation Amount : %1$s</string>
    <string name="activity_forecast_wind">Wind Force : %1$s</string>
    <string name="activity_forecast_weather">Current Weather : %1$s</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_forecast_sync_description">synchronizing</string>
    <string name="header_logo_description">application logo</string>
</resources>