<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".uidesign.FlightStatusInfoPopUpWindow">

    <TextView
        android:id="@+id/titleFlightStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:fontFamily="sans-serif-light"
        android:text="@string/flight_popup_title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/flightNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleFlightStatus"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/flightStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flightNumberText"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/flightResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flightStatus"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/depAirportInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flightResult"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/arrAirportInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depAirportInfo"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/airLineInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrAirportInfo"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/departureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flightResult"
        android:text="@string/flight_popup_departure_label"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/departureAirport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureLabel"
        android:text="" />

    <TextView
        android:id="@+id/departureDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureAirport"
        android:text="" />

    <TextView
        android:id="@+id/departureAirportName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureDate"
        android:text="" />

    <TextView
        android:id="@+id/departureAirportCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureAirportName"
        android:text="" />

    <TextView
        android:id="@+id/departureAirportCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureAirportCity"
        android:text="" />

    <TextView
        android:id="@+id/departureAirportLonLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureAirportCountry"
        android:text="" />

    <TextView
        android:id="@+id/arrivalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departureAirportLonLat"
        android:text="@string/flight_popup_arrival_label"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/arrivalAirport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalLabel"
        android:text="" />

    <TextView
        android:id="@+id/arrivalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalAirport"
        android:text="" />

    <TextView
        android:id="@+id/arrivalAirportName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalDate"
        android:text="" />

    <TextView
        android:id="@+id/arrivalAirportCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalAirportName"
        android:text="" />

    <TextView
        android:id="@+id/arrivalAirportCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalAirportCity"
        android:text="" />

    <TextView
        android:id="@+id/arrivalAirportLonLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrivalAirportCountry"
        android:text="" />

</RelativeLayout>